[package]
name = "alist-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
futures-async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
